# HornBro

./: README.md  pyproject.toml  requirements.txt
dataset/: random_dataset.py
evaluation/: batchsize.py  efficiencyHornBro.py  efficiencybaselines.py  fullvsminibatch.py  hornbrorepair.py  localsearch.py  repair_baseline_algo_mirror_grover.py  repair_localization.py
hornbro/: circuit.py  optimizer.py  testz3.py
hornbro/clliford/: cllifor_gate_optimize.py  cllifor_gate_parr_layer.py  cllifor_gate_parr_multilayer.py  layercircuit.py
hornbro/dataset/: clifford.py  load_dataset.py  random_dataset.py  utills.py
hornbro/paramizefix/: ddsim.py  input_sample.py  local_search.py  pennylane.py  pennylane_siwei.py  qiskit.py
